{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 30,
  "lineage": "61bda72d-a7a1-7188-25eb-07263f786b9b",
  "resources": [
    {
      "module": "module.ingw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ingw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:698841012174:internet-gateway/igw-019d55a9b46e9aa91",
            "id": "igw-019d55a9b46e9aa91",
            "owner_id": "698841012174",
            "vpc_id": "vpc-0ab2aafa8c74841b0"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "App-alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:698841012174:loadbalancer/app/App-LB/6fc089764230ebc4",
            "arn_suffix": "app/App-LB/6fc089764230ebc4",
            "dns_name": "App-LB-909383396.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:698841012174:loadbalancer/app/App-LB/6fc089764230ebc4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "App-LB",
            "security_groups": [
              "sg-015aa7e78632dfe37"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-049eda7e741722f0c"
              },
              {
                "subnet_id": "subnet-0ea4a43cbeed1541f"
              }
            ],
            "subnets": [
              "subnet-049eda7e741722f0c",
              "subnet-0ea4a43cbeed1541f"
            ],
            "vpc_id": "vpc-0ab2aafa8c74841b0",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.my_vpc.aws_security_group.websg",
            "module.my_vpc.aws_subnet.main-1",
            "module.my_vpc.aws_subnet.main-2",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "App-alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:698841012174:listener/app/App-LB/6fc089764230ebc4/322981b8d31e1e1e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:698841012174:targetgroup/ALB-TG/d6f69da320913ec8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:698841012174:listener/app/App-LB/6fc089764230ebc4/322981b8d31e1e1e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:698841012174:loadbalancer/app/App-LB/6fc089764230ebc4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.App-alb",
            "module.alb.aws_lb_target_group.target-elb",
            "module.my_vpc.aws_security_group.websg",
            "module.my_vpc.aws_subnet.main-1",
            "module.my_vpc.aws_subnet.main-2",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:698841012174:targetgroup/ALB-TG/d6f69da320913ec8",
            "arn_suffix": "targetgroup/ALB-TG/d6f69da320913ec8",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:698841012174:targetgroup/ALB-TG/d6f69da320913ec8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ab2aafa8c74841b0"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:698841012174:route-table/rtb-037657b623925ea98",
            "id": "rtb-037657b623925ea98",
            "owner_id": "698841012174",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-019d55a9b46e9aa91",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route to internet"
            },
            "vpc_id": "vpc-0ab2aafa8c74841b0"
          },
          "dependencies": [
            "module.ingw.aws_internet_gateway.ingw",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bc3fd948bc6d4ee",
            "route_table_id": "rtb-037657b623925ea98",
            "subnet_id": "subnet-049eda7e741722f0c"
          },
          "dependencies": [
            "module.ingw.aws_internet_gateway.ingw",
            "module.my_vpc.aws_route_table.route",
            "module.my_vpc.aws_subnet.main-1",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdced868a40f694e",
            "route_table_id": "rtb-037657b623925ea98",
            "subnet_id": "subnet-0ea4a43cbeed1541f"
          },
          "dependencies": [
            "module.ingw.aws_internet_gateway.ingw",
            "module.my_vpc.aws_route_table.route",
            "module.my_vpc.aws_subnet.main-2",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.db-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:698841012174:security-group/sg-0950d5a4a3d480b05",
            "description": "Allow inbound traffic from application layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0950d5a4a3d480b05",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from application layer",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-015aa7e78632dfe37"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database SG",
            "name_prefix": "",
            "owner_id": "698841012174",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab2aafa8c74841b0"
          },
          "dependencies": [
            "module.my_vpc.aws_security_group.websg",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "websg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:698841012174:security-group/sg-015aa7e78632dfe37",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015aa7e78632dfe37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221121105213814400000001",
            "name_prefix": "terraform-",
            "owner_id": "698841012174",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab2aafa8c74841b0"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "databasesub-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:698841012174:subnet/subnet-038260761aa74e49e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-038260761aa74e49e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "698841012174",
            "vpc_id": "vpc-0ab2aafa8c74841b0"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "databasesub-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:698841012174:subnet/subnet-0a86976e0051e57bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-0a86976e0051e57bd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "698841012174",
            "vpc_id": "vpc-0ab2aafa8c74841b0"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:698841012174:subnet/subnet-049eda7e741722f0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-049eda7e741722f0c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "698841012174",
            "vpc_id": "vpc-0ab2aafa8c74841b0"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:698841012174:subnet/subnet-0ea4a43cbeed1541f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0ea4a43cbeed1541f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "698841012174",
            "vpc_id": "vpc-0ab2aafa8c74841b0"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:698841012174:vpc/vpc-0ab2aafa8c74841b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-01b4b9a286adae023",
            "default_route_table_id": "rtb-0230a46d47ab349bd",
            "default_security_group_id": "sg-09244735800152dba",
            "dhcp_options_id": "dopt-0c71eff4a424daa3a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ab2aafa8c74841b0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0230a46d47ab349bd",
            "owner_id": "698841012174"
          }
        }
      ]
    }
  ]
}